<<<<<<< HEAD
[gd_scene load_steps=5 format=2]
=======
[gd_scene load_steps=6 format=2]
>>>>>>> 65cef6e038f2bedb7eab2f8a6d036ba3f100d403

[ext_resource path="res://assets/Kwikest vragen.png" type="Texture" id=1]
[ext_resource path="res://assets/Kwikest leader splash.png" type="Texture" id=2]
[ext_resource path="res://scripts/questions.gd" type="Script" id=3]
[ext_resource path="res://scenes/answer.tscn" type="PackedScene" id=4]

<<<<<<< HEAD
[node name="UI" type="CanvasLayer"]

[node name="questions" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
=======
[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 1, 0.109375, 1 )

[node name="UI" type="CanvasLayer"]

[node name="questions" type="Node" parent="."]
script = ExtResource( 3 )

[node name="answers" type="Control" parent="questions"]
margin_right = 40.0
margin_bottom = 40.0
>>>>>>> 65cef6e038f2bedb7eab2f8a6d036ba3f100d403
__meta__ = {
"_edit_use_anchors_": false
}

<<<<<<< HEAD
[node name="answer1" parent="questions" instance=ExtResource( 4 )]
margin_left = 490.0
margin_top = 770.0
margin_right = 530.0
margin_bottom = 810.0

[node name="answer2" parent="questions" instance=ExtResource( 4 )]
margin_left = 1072.0
margin_top = 780.0
margin_right = 1112.0
margin_bottom = 820.0

[node name="answer3" parent="questions" instance=ExtResource( 4 )]
margin_left = 490.0
margin_top = 892.0
margin_right = 530.0
margin_bottom = 932.0

[node name="answer4" parent="questions" instance=ExtResource( 4 )]
margin_left = 1068.0
margin_top = 894.0
margin_right = 1108.0
margin_bottom = 934.0
=======
[node name="answer" parent="questions/answers" instance=ExtResource( 4 )]

[node name="answer2" parent="questions/answers" instance=ExtResource( 4 )]

[node name="answer3" parent="questions/answers" instance=ExtResource( 4 )]

[node name="answer4" parent="questions/answers" instance=ExtResource( 4 )]
>>>>>>> 65cef6e038f2bedb7eab2f8a6d036ba3f100d403

[node name="TextureBox" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KK-splash" type="Sprite" parent="TextureBox"]
visible = false
z_index = 2
texture = ExtResource( 2 )
centered = false

[node name="QuestionBar" type="Sprite" parent="TextureBox"]
<<<<<<< HEAD
z_index = -1
texture = ExtResource( 1 )
centered = false
=======
z_index = 1
texture = ExtResource( 1 )
centered = false

[node name="BG" type="Panel" parent="TextureBox"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.00012207
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
>>>>>>> 65cef6e038f2bedb7eab2f8a6d036ba3f100d403
